# Super-Notes

./: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db_service.rs  main.rs  models.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/[noteId]/: page.tsx
src/app/note/[noteId]/: page.tsx
src/components/quill-editor/: quill-editor.tsx
src/components/ui/sidebar/: sidebar.tsx
