[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }


[dependencies]
tauri = { version = "1.6.5", features = [ "window-all", "macos-private-api"] }
serde = {version= "1.0.200", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
uuid = {version= "1.8.0", features= ["v4"] }
firestore = "0.42.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
